[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Porfirio Ribeiro <porfirioribeiro@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.0.0-beta.3"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.2"
tracing-actix-web = "0.3.0-beta.2"


[dependencies.sqlx]
version = "0.5.1"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
actix-rt = "2"
lazy_static = "1.4.0"
tokio = "1"

