[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Porfirio Ribeiro <porfirioribeiro@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.0.0-beta.3"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.2"
tracing-actix-web = "0.3.0-beta.2"
serde-aux = "2.1.1"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
reqwest = { version = "0.11.1", default-features = false, features = ["json", "rustls-tls"] }


[dependencies.sqlx]
version = "0.5.1"
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["macros"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.1"
serde_json = "1"
